--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,7 @@ set(LIB_PATHS
 # Utility paths
 set(UTIL_PATHS
     # ${CMAKE_CURRENT_SOURCE_DIR}/util/demo_util
+    ${CMAKE_CURRENT_SOURCE_DIR}/util/detector_example
     )
 
 if(${BUILD_TEST})
